--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack --env build && npm run examples:seed",
     "examples": "./scripts/examples",
     "examples:seed": "cp ./build/three-proton.js docs/js",
+    "dev": "webpack-dev-server",
     "test": "mocha --require babel-core/register --colors ./test/*.spec.js",
     "test:only": "mocha --require babel-core/register --colors",
     "test:watch": "mocha --require babel-core/register --colors -w ./test/*.spec.js",
@@ -45,14 +46,14 @@
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "eslint": "^3.19.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.8.0",
     "http-server": "^0.11.1",
     "jquery": "^3.3.1",
@@ -62,7 +63,9 @@
     "mocha": "^5.2.0",
     "sinon": "^2.1.0",
     "stats.js": "^0.17.0",
-    "webpack": "^2.3.3",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "yargs": "^7.0.2"
   }
 }
