--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/rohan-deshpande/three-proton#readme",
   "dependencies": {
+    "deepool": "^2.2.0",
     "lodash": "^4.17.11",
     "three": "^0.98.0",
     "uuid": "^3.3.2"
